2015-12-13 Martin Grønholdt

* Makefile: Fixed, did noot set FS_RILES correctly.
* README.md: Spelling.
* docs/TODO.md: Fixed wrong footnote.
* user/handlers/http/websocket/websocket.c: Added most of the protocol handling code.
* user/include/net/websocket.h: Added most of the WebSocket stuff.
* user/include/net/websocket.h: To keep with my style, prefix by http_.
* user/net/websocket.c: Most of the handler glue code is done.
* user/net/esp.mk: Doing the same, nicer.


2015-12-10 Martin Grønholdt

* 3rdparty/jsmn/jsmn.c: Use new include layout.
* Makefile: Total rework due to a file name clash bug.
* mk/*: Fitted to the new build system.
* users/*: Reorganised all source files, moving include files into "include".
* user/handlers/websocket/*: Split HTTP handshake from TCP code.
* user/net/websocket.c: Isolated TCP related code here.
* user/include/net/websocket.h: Isolated TCP related code here.
* user/user_main.c: Removed REST handlers.
* user/handlers/*: Moved to user/handlers/http.
* user/handler/http/*: New directory for HTTP handlers.


2015-12-07 Martin Grønholdt

* Makefile: Add baud rate to defines.
			Adjusted debugging for non implemented gdbstub.
			Added assembly compilation for non implemented gdbstub.
* mk/linux.mk: Added as.
* user/driver/uart.c: Added C99 ints.
* user/handlers/websocket/websocket.*: Very basic but working WebSocket.
* user/net/tcp.*: Added support for per connection callbacks.
* user/user_config.h: Added IRAM_ATTR to place stuff in RAM.




2015-11-39 Martin Grønholdt

* user/handlers/websocket/websocket.c: More handshaking code.
* user/slighttp/http-response.c (http_send_header): Handle NULL input better.
* user/slighttp/http-response.h: Added 426 status.
* user/slighttp/http-tcp.c (tcp_recv_cb): Remove redundant error check.
* user/tools/base64.*: Last fixes, seems to work.
* user/tools/sha1.*: Fixed a bug in the padding code.


2015-11-25 Martin Grønholdt
